--- a/playground/package.json
+++ b/playground/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0"
+    "@astrojs/check": "^0.4.1",
+    "@types/node": "^20.11.0",
+    "typescript": "^5.3.3"
   }
 }
