--- a/package/package.json
+++ b/package/package.json
@@ -27,5 +27,8 @@
   "type": "module",
   "peerDependencies": {
     "astro": "^4.0.0"
+  },
+  "dependencies": {
+    "astro-integration-kit": "^0.0.2"
   }
 }
