--- a/playground/package.json
+++ b/playground/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "playground",
-  "type": "module",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.5.13",
-    "package-name": "workspace:*",
-    "tailwindcss": "^3.4.3"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@types/node": "^20.12.2",
-    "typescript": "^5.4.3"
-  }
+	"name": "playground",
+	"type": "module",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/tailwind": "^5.1.0",
+		"astro": "^4.5.13",
+		"astro-integration-kit": "^0.8.0",
+		"package-name": "workspace:*",
+		"tailwindcss": "^3.4.3"
+	},
+	"devDependencies": {
+		"@astrojs/check": "^0.5.10",
+		"@types/node": "^20.12.2",
+		"typescript": "^5.4.3"
+	}
 }
