--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"package:dev": "pnpm --filter package-name dev",
 		"playground:dev": "pnpm --filter playground dev",
-		"dev": "concurrently --kill-others \"pnpm --filter package-name dev\" \"pnpm --filter playground dev\"",
+		"dev": "pnpm --stream -r -parallel dev",
 		"changeset": "changeset",
 		"release": "node scripts/release.mjs",
 		"lint": "biome check .",
@@ -16,7 +16,6 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.6.4",
-		"@changesets/cli": "^2.27.1",
-		"concurrently": "^8.2.2"
+		"@changesets/cli": "^2.27.1"
 	}
 }
