--- a/templates/github-kit/.changeset/config.json
+++ b/templates/github-kit/.changeset/config.json
@@ -1,11 +1,18 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
-	"changelog": "@changesets/cli/changelog",
+	"changelog": [
+		"@changesets/changelog-github",
+		{
+			"repo": "<repo>/<org>"
+		}
+	],
 	"commit": false,
 	"fixed": [],
 	"linked": [],
 	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
-	"ignore": ["playground"]
+	"ignore": [
+		"playground"
+	]
 }
