--- a/templates/github-kit/package.json
+++ b/templates/github-kit/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@changesets/cli": "^2.27.11"
+		"@changesets/cli": "^2.27.11",
+		"@changesets/changelog-github": "^0.5.0"
 	}
 }
