--- a/templates/github-kit/.changeset/config.json
+++ b/templates/github-kit/.changeset/config.json
@@ -12,7 +12,5 @@
 	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
-	"ignore": [
-		"playground"
-	]
+	"ignore": ["playground"]
 }
