--- a/templates/github-kit/.github/workflows/release.yml
+++ b/templates/github-kit/.github/workflows/release.yml
@@ -4,37 +4,58 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - labeled
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+defaults:
+  run:
+    shell: bash
+
+env:
+  FORCE_COLOR: true
 
 jobs:
-  release:
-    name: Release
+  changelog:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
+    permissions:
+      contents: write
+      id-token: write
     steps:
-      - name: Checkout Repo
+      - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Setup pnpm
+
+      - name: Setup PNPM
         run: corepack enable && pnpm -v
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.19.0
-          cache: "pnpm"
+          node-version: 20.18.0
+          cache: pnpm
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Build
+        run: pnpm --filter package-name build
+
+      - name: Create Release Pull Request or Publish
         id: changesets
+        if: ${{ github.event_name == 'push' }}
         uses: changesets/action@v1
         with:
-          version: pnpm ci:version
-          commit: "[ci]: release"
-          title: "[ci] Release"
-          publish: pnpm ci:publish
+          version: pnpm run ci:version
+          publish: pnpm run ci:publish
+          commit: "[ci] release"
+          title: "[ci] release"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # Needs the repo permissions
+          GITHUB_TOKEN: ${{ secrets.COMMIT_TOKEN }}
+          # Needs access to publish to npm
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
