--- a/templates/github-kit/package.json
+++ b/templates/github-kit/package.json
@@ -3,15 +3,15 @@
 	"private": true,
 	"packageManager": "pnpm@9.15.3",
 	"engines": {
-		"node": ">=18.20.3"
+		"node": ">=20.18.1"
 	},
 	"scripts": {
 		"package:dev": "pnpm --filter package-name dev",
 		"playground:dev": "pnpm --filter playground dev",
 		"dev": "pnpm --stream -r -parallel dev",
 		"changeset": "changeset",
-		"ci:version": "pnpm changeset version",
-		"ci:publish": "pnpm changeset publish",
+		"ci:version": "pnpm exec changeset version && pnpm install --no-frozen-lockfile && pnpm dedupe",
+		"ci:publish": "pnpm exec changeset publish && git push --follow-tags",
 		"lint": "biome check .",
 		"lint:fix": "biome check --apply ."
 	},
