--- a/templates/github-kit/package.json
+++ b/templates/github-kit/package.json
@@ -10,12 +10,14 @@
 		"playground:dev": "pnpm --filter playground dev",
 		"dev": "pnpm --stream -r -parallel dev",
 		"changeset": "changeset",
-		"release": "node scripts/release.mjs",
+		"ci:version": "pnpm exec changeset version && pnpm install --no-frozen-lockfile && pnpm dedupe",
+		"ci:publish": "pnpm exec changeset publish && git push --follow-tags",
 		"lint": "biome check .",
 		"lint:fix": "biome check --apply ."
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@changesets/cli": "^2.27.11"
+		"@changesets/cli": "^2.27.11",
+		"@changesets/changelog-github": "^0.5.0"
 	}
 }
