--- a/templates/manual-kit/playground/package.json
+++ b/templates/manual-kit/playground/package.json
@@ -11,7 +11,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/tailwind": "^5.1.5",
+		"@tailwindcss/vite": "^4.0.0",
 		"astro": "^5.1.9",
 		"astro-integration-kit": "^0.18.0",
 		"package-name": "workspace:*",
