feat: update biome

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"scripts": {
 		"lint": "biome check .",
-		"lint:fix": "biome check --apply ."
+		"lint:fix": "biome check --write"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.4"
