--- a/templates/github-kit/package/package.json
+++ b/templates/github-kit/package/package.json
@@ -26,7 +26,9 @@
 			"default": "./dist/index.js"
 		}
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "tsup --watch",
 		"build": "tsup"
