--- a/templates/github-kit/package.json
+++ b/templates/github-kit/package.json
@@ -10,10 +10,10 @@
 		"playground:dev": "pnpm --filter playground dev",
 		"dev": "pnpm --stream -r -parallel dev",
 		"changeset": "changeset",
-		"ci:version": "pnpm exec changeset version && pnpm install --no-frozen-lockfile && pnpm dedupe",
-		"ci:publish": "pnpm exec changeset publish && git push --follow-tags",
 		"lint": "biome check .",
-		"lint:fix": "biome check --write"
+		"lint:fix": "biome check --write",
+		"ci-version": "changeset version && pnpm install --no-frozen-lockfile",
+		"ci-publish": "changeset publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
