--- a/templates/github-kit/packages/package-name/package.json
+++ b/templates/github-kit/packages/package-name/package.json
@@ -2,23 +2,7 @@
 	"name": "package-name",
 	"version": "0.0.0",
 	"description": "TODO:",
-	"author": {
-		"email": "TODO:",
-		"name": "TODO:",
-		"url": "TODO:"
-	},
-	"license": "MIT",
-	"keywords": [
-		"astro-integration",
-		"astro-component",
-		"withastro",
-		"astro",
-		"TODO:"
-	],
-	"homepage": "TODO:",
-	"publishConfig": {
-		"access": "public"
-	},
+	"type": "module",
 	"sideEffects": false,
 	"exports": {
 		".": {
@@ -31,9 +15,24 @@
 	],
 	"scripts": {
 		"dev": "tsup --watch",
-		"build": "tsup"
+		"build": "tsup",
+		"prepublishOnly": "pnpm build"
 	},
-	"type": "module",
+	"keywords": [
+		"astro-integration",
+		"astro-component",
+		"withastro",
+		"astro",
+		"TODO:"
+	],
+	"author": "TODO:",
+	"repository": {
+		"type": "git",
+		"url": "git+TODO:.git"
+	},
+	"bugs": "TODO:",
+	"homepage": "TODO:",
+	"license": "MIT",
 	"peerDependencies": {
 		"astro": "^5.1.3"
 	},
