--- a/templates/github-kit/package.json
+++ b/templates/github-kit/package.json
@@ -17,7 +17,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
-		"@changesets/cli": "^2.29.7",
-		"@changesets/changelog-github": "^0.5.1"
+		"@changesets/cli": "2.29.7",
+		"@changesets/changelog-github": "0.5.1"
 	}
 }
