--- a/templates/github-kit/packages/package-name/package.json
+++ b/templates/github-kit/packages/package-name/package.json
@@ -37,9 +37,9 @@
 		"astro": "^5.1.3"
 	},
 	"dependencies": {
-		"astro-integration-kit": "^0.19.0"
+		"astro-integration-kit": "0.19.0"
 	},
 	"devDependencies": {
-		"tsup": "^8.5.0"
+		"tsup": "8.5.0"
 	}
 }
